added react bar

--- a/index.html
+++ b/index.html
@@ -164,6 +164,15 @@
                         </div>
                         <div class="skill-item">
                             <div class="skill-header">
+                                <span class="skill-name">React</span>
+                                <span class="skill-percent">75%</span>
+                            </div>
+                            <div class="skill-bar">
+                                <div class="skill-fill" data-width="90"></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
+                            <div class="skill-header">
                                 <span class="skill-name">Node.js</span>
                                 <span class="skill-percent">70%</span>
                             </div>
