Social link added

--- a/index.html
+++ b/index.html
@@ -332,9 +332,9 @@
                             </div>
                         </div>
                         <div class="social-links">
-                            <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                            <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                            <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+                            <a href="https://github.com/Scorpion9205" class="social-link" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://www.linkedin.com/in/satyapal-tiwari-1178762bb/" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://x.com/Satyapal920" class="social-link" target="_blank"><i class="fab fa-twitter"></i></a>
                         </div>
                     </div>
                     <form class="contact-form" id="contact-form">
