get in touch change

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             <div class="container">
                 <div class="section-header">
                     <h2 class="section-title">
-                        <span class="gradient-text">Get In Touch</span>
+                        <span class="gradient-text">Get In Touch with me </span>
                     </h2>
                     <p class="section-subtitle">
                         Let's discuss your next project or just say hello
