--- a/index.html
+++ b/index.html
@@ -235,15 +235,14 @@
                             <div class="project-placeholder">🚀</div>
                         </div>
                         <div class="project-content">
-                            <h3 class="project-title">E-Commerce Platform</h3>
+                            <h3 class="project-title">Note App</h3>
                             <p class="project-description">
-                                A full-stack e-commerce solution built with React, Node.js, and MongoDB. 
-                                Features include user authentication, payment processing, and admin dashboard.
+                               A Note App built in React and Tailwind CSS with the Deletion functionality 
                             </p>
                             <div class="project-tech">
                                 <span class="tech-badge">React</span>
-                                <span class="tech-badge">Node.js</span>
-                                <span class="tech-badge">MongoDB</span>
+                                <span class="tech-badge">Tailwind</span>
+                                
                             </div>
                             <div class="project-links">
                                 <a href="#" class="project-link">Live Demo</a>
