Note app github link add

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 <div class="projects-grid">
                     <div class="project-card">
                         <div class="project-image">
-                            <div class="project-placeholder">🚀</div>
+                            <div class="project-placeholder">📝</div>
                         </div>
                         <div class="project-content">
                             <h3 class="project-title">Note App</h3>
@@ -246,7 +246,7 @@
                             </div>
                             <div class="project-links">
                                 <a href="#" class="project-link">Live Demo</a>
-                                <a href="#" class="project-link">GitHub</a>
+                                <a href="https://github.com/Scorpion9205/Note-APP" class="project-link">GitHub</a>
                             </div>
                         </div>
                     </div>
