add noteapp link

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                                 
                             </div>
                             <div class="project-links">
-                                <a href="#" class="project-link">Live Demo</a>
+                                <a href="https://note-app-theta-flame.vercel.app/" class="project-link">Live Demo</a>
                                 <a href="https://github.com/Scorpion9205/Note-APP" class="project-link">GitHub</a>
                             </div>
                         </div>
